--- a/examples/dinov3_i2i.yaml
+++ b/examples/dinov3_i2i.yaml
@@ -2,14 +2,10 @@
 # Trained on Stanford Online Products (SOP)
 
 # --- Model ---
-# Using "auto" mode since DINOv3 is supported via AutoModel/AutoProcessor
-encoder_mode: "auto"
-model_name: "models/dinov3-vitb16-pretrain-lvd1689m"
+model_type: "custom"
+model_name: "facebook/dinov3-vitb16-pretrain-lvd1689m"
 retrieval_mode: "i2i"
-use_lora: true      # Fine-tuning with LoRA
-lora_r: 16
-lora_alpha: 32
-lora_target_modules: ["q_proj", "v_proj", "query", "value", "key", "dense"]
+use_lora: true
 
 # --- Data ---
 data_path: "data/stanford_online_products/train.jsonl"
@@ -18,11 +14,10 @@ image_root: "data/stanford_online_products"
 
 # --- Training ---
 output_dir: "experiments/output_sop_dinov3_i2i"
-epochs: 10          # Reduced epochs for larger model
-batch_size: 128      # Reduced batch size for larger model
-learning_rate: 2.0e-5 # Slightly lower LR for fine-tuning
+epochs: 10
+batch_size: 128
+learning_rate: 5.0e-5
 loss_type: "infonce"
-gradient_checkpointing: true # Save memory
 
 # --- Logging ---
 report_to: "none"
