Fix GitHub Pages deployment: Add docs_dir configuration to mkdocs.yml
The mkdocs.yml file was missing the explicit `docs_dir: docs` configuration,
causing mkdocs to look for markdown files in the project root instead of the
docs/ directory. This caused all 25 navigation references to fail during the
build step, resulting in the GitHub Pages deployment failure.

Changes:
- Added `docs_dir: docs` setting to mkdocs.yml
- All 25 API documentation files now properly referenced
- GitHub Actions workflow can now successfully build and deploy docs

This resolves the deployment issue marked with X in GitHub Pages.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,9 @@ site_url: https://fangzhensheng.github.io/vembed-factory/
 repo_url: https://github.com/fangzhensheng/vembed-factory
 repo_name: fangzhensheng/vembed-factory
 
+# Documentation directory
+docs_dir: docs
+
 theme:
   name: material
   features:
