--- a/examples/qwen_colbert.yaml
+++ b/examples/qwen_colbert.yaml
@@ -1,22 +1,12 @@
-# Qwen2-VL ColBERT Training Configuration
-# Uses late-interaction loss (multi-vector)
-
-# --- Model ---
-model_type: "qwen"
+model_name: Qwen/Qwen2-7B-Instruct
 use_lora: true
-
-# --- Data ---
-data_path: "data/train.jsonl"
-val_data_path: "data/val.jsonl"
-image_root: "data/images"
-
-# --- Training ---
-output_dir: "experiments/output_qwen_colbert"
+data_path: data/train.jsonl
+val_data_path: data/val.jsonl
+image_root: data/images
+output_dir: experiments/output_qwen_colbert
 epochs: 3
 batch_size: 64
-loss_type: "colbert"
-pooling_strategy: "colbert"
-
-# --- Memory ---
+loss_type: colbert
+pooling_strategy: colbert
 use_gradient_cache: true
 gradient_cache_chunk_size: 4
