--- a/examples/bge_t2t.yaml
+++ b/examples/bge_t2t.yaml
@@ -1,14 +1,7 @@
-# BGE-M3 Text-to-Text Training Configuration
-
-# --- Model ---
-model_type: "bge_m3"
-retrieval_mode: "t2t"
+model_name: BAAI/bge-base-en-v1.5
+retrieval_mode: t2t
 use_lora: true
-
-# --- Data ---
-data_path: "data/train.jsonl"
-val_data_path: "data/val.jsonl"
-
-# --- Training ---
-output_dir: "experiments/output_bge_t2t"
+data_path: data/train.jsonl
+val_data_path: data/val.jsonl
+output_dir: experiments/output_bge_t2t
 epochs: 3
