--- a/examples/clip_train.yaml
+++ b/examples/clip_train.yaml
@@ -1,16 +1,17 @@
 # CLIP ViT-B/32 Training Configuration
+# Complete standalone configuration for CLIP training
 
-# --- Model ---
-model_type: "clip"  # Base preset
+# Model Configuration
+model_name_or_path: "openai/clip-vit-base-patch32"
+
+# Training Configuration
 use_lora: true
-
-# --- Data ---
-data_path: "data/train.jsonl"
-val_data_path: "data/val.jsonl"
-image_root: "data/images"
-
-# --- Training ---
-output_dir: "experiments/output_clip"
+output_dir: experiments/output_clip
 epochs: 20
 batch_size: 128
+learning_rate: 2.0e-5
 
+# Data
+data_path: data/train.jsonl
+val_data_path: data/val.jsonl
+image_root: data/images
