--- a/examples/clip_triplet.yaml
+++ b/examples/clip_triplet.yaml
@@ -1,15 +1,8 @@
-# CLIP Triplet Loss Training Configuration
-
-# --- Model ---
-model_type: "clip"
+model_name: openai/clip-vit-base-patch32
 use_lora: true
-
-# --- Data ---
-data_path: "data/train.jsonl"
-val_data_path: "data/val.jsonl"
-image_root: "data/images"
-
-# --- Training ---
-output_dir: "experiments/output_clip_triplet"
+data_path: data/train.jsonl
+val_data_path: data/val.jsonl
+image_root: data/images
+output_dir: experiments/output_clip_triplet
 epochs: 5
-loss_type: "triplet"
+loss_type: triplet
