--- a/examples/qwen3_8b_fsdp.yaml
+++ b/examples/qwen3_8b_fsdp.yaml
@@ -1,21 +1,30 @@
-# Qwen3-VL-Embedding-8B FSDP Training Configuration
+# Qwen3-VL-Embedding-8B Training Configuration with FSDP
 
-# --- Model ---
-model_type: "qwen3_8b"
-use_lora: true
+# Model
+model_name: "Qwen/Qwen3-VL-Embedding-8B"
+encoder_mode: "qwen3_vl"
 attn_implementation: "flash_attention_2"
 torch_dtype: "bfloat16"
-gradient_checkpointing: true
 
-# --- Data ---
+# Data
 data_path: "data/train.jsonl"
 val_data_path: "data/val.jsonl"
 image_root: "data/images"
 
-# --- Training ---
+# Training
 output_dir: "experiments/output_qwen3_8b_fsdp"
 epochs: 3
+batch_size: 64
+learning_rate: 2.0e-5
+loss_type: "infonce"
 
-# --- Distributed (FSDP) ---
+# Memory Optimization with FSDP
+# FSDP: Shards model parameters, gradients, and optimizer states across GPUs
+# This enables training of 8B+ models on multi-GPU setups
 use_fsdp: true
-num_gpus: 4
+gradient_checkpointing: true
+use_lora: true
+
+# Multi-Resolution Learning (reduced dims for FSDP memory efficiency)
+use_mrl: true
+mrl_dims: [1024]
