--- a/examples/dinov2_bert_train.yaml
+++ b/examples/dinov2_bert_train.yaml
@@ -6,4 +6,5 @@ val_data_path: data/val.jsonl
 image_root: data/images
 output_dir: experiments/output_dinov2_bert
 epochs: 3
+learning_rate: 1.0e-04
 use_gradient_cache: true
