--- a/examples/siglip_train.yaml
+++ b/examples/siglip_train.yaml
@@ -1,4 +1,4 @@
-model_name: google/siglip-so400m-14-flash
+model_name: google/siglip-base-patch16-224
 use_lora: true
 data_path: data/train.jsonl
 val_data_path: data/val.jsonl
@@ -6,5 +6,5 @@ image_root: data/images
 output_dir: experiments/output_siglip
 epochs: 10
 batch_size: 256
-learning_rate: 0.0002
+learning_rate: 1.0e-04
 loss_type: sigmoid
