docs: clean up and improve comments in example configs

--- a/examples/dinov2_colbert.yaml
+++ b/examples/dinov2_colbert.yaml
@@ -1,43 +1,34 @@
-# DINOv2 ColBERT — Image-to-Image retrieval on SOP dataset
-# Custom model with i2i retrieval mode + ColBERT Loss
+# DINOv2 + ColBERT for image-to-image retrieval on SOP
+# Late-interaction loss with token-level embeddings
 
 model_name: facebook/dinov2-base
 retrieval_mode: i2i
 use_lora: true
 
-# ========== ColBERT Configuration ==========
-# 1. Loss: MaxSim-based late-interaction scoring
-#    Scores: mean(max over query tokens - max over doc tokens)
+# ColBERT: MaxSim-based late-interaction scoring
+# Requires token-level embeddings (no pooling) for per-token similarities
 loss_type: colbert
-
-# 2. Embedding Output: Token-level representation (no global pooling)
-#    Returns [B, 257, D] — all 256 patches + 1 CLS token
-#    Required for ColBERT to compute per-token similarities
-#    Auto-set to "none" when loss_type=colbert
 pooling_method: none
 
-# 3. Optional: Attention-guided token pruning
-#    Keeps only top-K patches by CLS-patch cosine similarity
-#    Reduces compute while preserving object-of-interest details
-#    Set to 0 to disable (keep all tokens, default)
+# Attention-guided token pruning: keep top-32 patches by attention scores
+# Reduces compute while preserving object-of-interest
 topk_tokens: 32
-
-# 4. Optional: Dimension reduction via projection
 projection_dim: 128
 
-# ========== Data and Training ==========
+# Data
 data_path: data/stanford_online_products/train.jsonl
 val_data_path: data/stanford_online_products/val.jsonl
 image_root: data/stanford_online_products
 output_dir: experiments/output_sop_dinov2_colbert
 
+# Training: 20 epochs with gradient caching for large batches
 epochs: 20
 batch_size: 128
 eval_batch_size: 32
 learning_rate: 1.0e-04
 use_gradient_cache: true
 
-# ========== Logging and Checkpointing ==========
+# Logging
 report_to: none
 logging_steps: 10
 save_steps: 1000
