--- a/examples/dinov2_bert_train.yaml
+++ b/examples/dinov2_bert_train.yaml
@@ -1,10 +1,15 @@
+# Composed encoder: DINOv2-small + BERT
+# Combines vision and text encoders for retrieval tasks
+
 model_name: facebook/dinov2-small
 encoder_mode: composed
 use_lora: true
-data_path: data/train.jsonl
-val_data_path: data/val.jsonl
-image_root: data/images
+
 output_dir: experiments/output_dinov2_bert
 epochs: 3
 learning_rate: 1.0e-04
 use_gradient_cache: true
+
+data_path: data/train.jsonl
+val_data_path: data/val.jsonl
+image_root: data/images
