--- a/examples/dinov2_i2i.yaml
+++ b/examples/dinov2_i2i.yaml
@@ -1,14 +1,20 @@
+# DINOv2 for image-to-image retrieval on SOP
+# Global pooling with InfoNCE contrastive loss
+
 model_name: facebook/dinov2-base
 retrieval_mode: i2i
 use_lora: true
-data_path: data/stanford_online_products/train.jsonl
-val_data_path: data/stanford_online_products/val.jsonl
-image_root: data/stanford_online_products
+loss_type: infonce
+
 output_dir: experiments/output_sop_dinov2_i2i
 epochs: 20
 batch_size: 128
 learning_rate: 1.0e-04
-loss_type: infonce
+
+data_path: data/stanford_online_products/train.jsonl
+val_data_path: data/stanford_online_products/val.jsonl
+image_root: data/stanford_online_products
+
 report_to: none
 logging_steps: 10
 save_steps: 1000
